# docker-privoxy-https

./: .gitignore  Dockerfile  README.md  config  docker-entrypoint.sh  proxy.example.pac  pyproject.toml  supervisord.conf
.github/workflows/: docker_auto.yml  test.yml
data/: config  privoxy-blocklist.conf
data/rules/: user.action
rules/: user.filter
tests/: conftest.py  test_privoxy.py
